// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClaySticker should generate the default markup 1`] = `
<div>
  <span class="sticker sticker-primary"></span>
</div>
`;

exports[`ClaySticker should render a \`danger color\` sticker 1`] = `
<div>
  <span class="sticker sticker-danger"></span>
</div>
`;

exports[`ClaySticker should render a \`dark color\` sticker 1`] = `
<div>
  <span class="sticker sticker-dark"></span>
</div>
`;

exports[`ClaySticker should render a \`info color\` sticker 1`] = `
<div>
  <span class="sticker sticker-info"></span>
</div>
`;

exports[`ClaySticker should render a \`light color\` sticker 1`] = `
<div>
  <span class="sticker sticker-light"></span>
</div>
`;

exports[`ClaySticker should render a \`primary color\` sticker 1`] = `
<div>
  <span class="sticker sticker-primary"></span>
</div>
`;

exports[`ClaySticker should render a \`secondary color\` sticker 1`] = `
<div>
  <span class="sticker sticker-secondary"></span>
</div>
`;

exports[`ClaySticker should render a \`success color\` sticker 1`] = `
<div>
  <span class="sticker sticker-success"></span>
</div>
`;

exports[`ClaySticker should render a \`warning color\` sticker 1`] = `
<div>
  <span class="sticker sticker-warning"></span>
</div>
`;

exports[`ClaySticker should render a bottom left positioned sticker 1`] = `
<div>
  <span class="sticker sticker-primary sticker-bottom-left"></span>
</div>
`;

exports[`ClaySticker should render a bottom right positioned sticker 1`] = `
<div>
  <span class="sticker sticker-primary sticker-bottom-right"></span>
</div>
`;

exports[`ClaySticker should render a circle sticker 1`] = `
<div>
  <span class="sticker sticker-primary rounded-circle"></span>
</div>
`;

exports[`ClaySticker should render a extra large sticker 1`] = `
<div>
  <span class="sticker sticker-primary sticker-xl"></span>
</div>
`;

exports[`ClaySticker should render a large sticker 1`] = `
<div>
  <span class="sticker sticker-primary sticker-lg"></span>
</div>
`;

exports[`ClaySticker should render a small sticker 1`] = `
<div>
  <span class="sticker sticker-primary sticker-sm"></span>
</div>
`;

exports[`ClaySticker should render a sticker with icon 1`] = `
<div>
  <span class="sticker sticker-primary">
    <svg aria-hidden="true" class="lexicon-icon lexicon-icon-plus icon-monospaced">
      <use xlink:href="icons.svg#plus"></use>
    </svg>
  </span>
</div>
`;

exports[`ClaySticker should render a sticker with id 1`] = `
<div>
  <span class="sticker sticker-primary" id="mySticker"></span>
</div>
`;

exports[`ClaySticker should render a sticker with label 1`] = `
<div>
  <span class="sticker sticker-primary">
    <span>Doc E. Brown</span>
  </span>
</div>
`;

exports[`ClaySticker should render a top left positioned sticker 1`] = `
<div>
  <span class="sticker sticker-primary sticker-top-left"></span>
</div>
`;

exports[`ClaySticker should render a top right positioned sticker 1`] = `
<div>
  <span class="sticker sticker-primary sticker-top-right"></span>
</div>
`;

exports[`ClaySticker should render an outside bottom left positioned sticker 1`] = `
<div>
  <span class="sticker sticker-primary sticker-outside sticker-bottom-left"></span>
</div>
`;

exports[`ClaySticker should render an outside bottom right positioned sticker 1`] = `
<div>
  <span class="sticker sticker-primary sticker-outside sticker-bottom-right"></span>
</div>
`;

exports[`ClaySticker should render an outside top left positioned sticker 1`] = `
<div>
  <span class="sticker sticker-primary sticker-outside sticker-top-left"></span>
</div>
`;

exports[`ClaySticker should render an outside top right positioned sticker 1`] = `
<div>
  <span class="sticker sticker-primary sticker-outside sticker-top-right"></span>
</div>
`;
